<resources>
    <string name="app_name">ManProBeaconSender</string>
    <!-- Impostazioni -->
    <string name="sezione1">Account</string>
    <string name="pref_summary_indirizzoInvio">Indirizzo utilizzato per collegarsi al portale. Ad esempio https://sviluppo.manpronet.com </string>
    <string name="pref_title_indirizzoInvio">Indirizzo del portale</string>
    <string name="pref_stringa_connessione">Identificativo del database</string>
    <string name="pref_generic_summary">Il dato viene fornito dal gestore</string>
    <string name="pref_login">Login</string>
    <string name="pref_password">Password</string>
    <string name="inviaReport">Invia report</string>
    <string name="invioDatiEmail">Invia i dati via Email</string>
    <string name="sezione3">Informazioni</string>
    <string name="pref_updateApp">Cerca aggiornamenti</string>
    <string name="txtGooglePlay">su Google Play</string>
    <string name="pref_versione">Versione dell\'applicazione</string>
    <!-- Main parte grafica -->
    <string name="textBluetooth">Bluetooth</string>
    <string name="btnBluetooth">Controlla</string>
    <string name="textInternet">Internet</string>
    <string name="btnInternet">Controlla</string>
    <string name="btnImpostazioni">Impostazioni</string>
    <!-- Main parte codice -->
    <string name="bluetoothAcceso">Bluetooth abilitao</string>
    <string name="bluetoothSpento">Bluetooth NON abilitato</string>
    <string name="connessioneAccesa">Connessione presente</string>
    <string name="connessioneSpenta">Connessione NON presente</string>
    <!-- Intento per chiamata esterna ad App -->
    <string name="chooseApplication">Scegliere applicazione</string>
    <!-- Volley -->
    <string name="errore">Errore</string>
    <string name="assistenza">Assistenza</string>
    <string name="pref_time_send" translatable="false">Tempo di invio</string>
    <string name="pref_time_send_summary" translatable="false">Il valore di default è 5 minuti</string>

    <string name="copy_ok" translatable="false">Dato Copiato!</string>
    <string name="copy_err" translatable="false">Il Dato non è stato Copiato!</string>

    <string name="richiestaPosizione">Questa app richiede l\'accesso alla posizione GPS</string>
    <string name="mexRichiestaPosizione">Si prega di concedere l\'accesso alla posizione in modo che questa app possa rilevare i beacon in background.</string>

    <!--
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    -->
</resources>